Improved trusted certficiate management, added import method to the Certificate Manager Improved system specification interface and default implementation with getHostname method Fixed encoding issue with maven resource plugin, project now uses UTF-8 encoding Added draft README for registry service

--- a/shopfoundry-services/shopfoundry-services-registry/pom.xml
+++ b/shopfoundry-services/shopfoundry-services-registry/pom.xml
@@ -106,6 +106,7 @@
 									<filtering>true</filtering>
 								</resource>
 							</resources>
+							<encoding>${encoding}</encoding>
 						</configuration>
 					</execution>
 				</executions>
