--- a/shopfoundry-services-pki/shopfoundry-services-pki-ca/pom.xml
+++ b/shopfoundry-services-pki/shopfoundry-services-pki-ca/pom.xml
@@ -93,6 +93,7 @@
 									<filtering>false</filtering>
 								</resource>
 							</resources>
+							<encoding>${encoding}</encoding>
 						</configuration>
 					</execution>
 					<execution>
