--- a/shopfoundry-services/shopfoundry-services-pki-ca/pom.xml
+++ b/shopfoundry-services/shopfoundry-services-pki-ca/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>shopfoundry.org</groupId>
-		<artifactId>shopfoundry-services-pki</artifactId>
+		<artifactId>shopfoundry-services</artifactId>
 		<version>0.0.1</version>
 	</parent>
 	<artifactId>shopfoundry-services-pki-ca</artifactId>
