Registry service database layer draft Hibernate support and generic repository draft

--- a/shopfoundry-services/shopfoundry-services-pki-ca/pom.xml
+++ b/shopfoundry-services/shopfoundry-services-pki-ca/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<artifactId>shopfoundry-services-pki-ca</artifactId>
 
-	<name>ShopFoundry / Services / PKI / CA</name>
+	<name>ShopFoundry / Services / Certificate Authority</name>
 	<description>Online marketplace platform PKI Certificate Authority service package</description>
 	<dependencies>
 		<dependency>
