--- a/shopfoundry-core/shopfoundry-core-db/pom.xml
+++ b/shopfoundry-core/shopfoundry-core-db/pom.xml
@@ -1,25 +1,31 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>shopfoundry.org</groupId>
-    <artifactId>shopfoundry-core</artifactId>
-    <version>0.0.1</version>
-  </parent>
-  
-  <name>ShopFoundry / Core / DB</name>
-  <description>Online marketplace platform core database package</description>
-  
-  <artifactId>shopfoundry-core-db</artifactId>
-  <dependencies>
-  	<dependency>
-  		<groupId>mysql</groupId>
-  		<artifactId>mysql-connector-java</artifactId>
-  		<version>5.1.34</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.hibernate</groupId>
-  		<artifactId>hibernate-core</artifactId>
-  		<version>4.3.8.Final</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>shopfoundry.org</groupId>
+		<artifactId>shopfoundry-core</artifactId>
+		<version>0.0.1</version>
+	</parent>
+
+	<name>ShopFoundry / Core / DB</name>
+	<description>Online marketplace platform core database package</description>
+
+	<artifactId>shopfoundry-core-db</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.34</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.8.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-c3p0</artifactId>
+			<version>4.3.8.Final</version>
+		</dependency>
+	</dependencies>
 </project>
