--- a/shopfoundry-services/shopfoundry-services-email/pom.xml
+++ b/shopfoundry-services/shopfoundry-services-email/pom.xml
@@ -1,25 +1,119 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>shopfoundry.org</groupId>
-    <artifactId>shopfoundry-services</artifactId>
-    <version>0.0.1</version>
-  </parent>
-  <artifactId>shopfoundry-services-email</artifactId>
-  
-  <name>ShopFoundry / Services / Email Dispatcher</name>
-  <description>Online marketplace platform email service package</description>
-  
-  <dependencies>
-  	<dependency>
-  		<groupId>shopfoundry.org</groupId>
-  		<artifactId>shopfoundry-core-service</artifactId>
-  		<version>0.0.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>shopfoundry.org</groupId>
-  		<artifactId>shopfoundry-core-utils</artifactId>
-  		<version>0.0.1</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>shopfoundry.org</groupId>
+		<artifactId>shopfoundry-services</artifactId>
+		<version>0.0.1</version>
+	</parent>
+	<artifactId>shopfoundry-services-email</artifactId>
+
+	<name>ShopFoundry / Services / Email Dispatcher</name>
+	<description>Online marketplace platform email service package</description>
+
+	<dependencies>
+		<dependency>
+			<groupId>shopfoundry.org</groupId>
+			<artifactId>shopfoundry-core-service</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>shopfoundry.org</groupId>
+			<artifactId>shopfoundry-core-utils</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+
+		<!-- Resources -->
+		<resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+
+		<plugins>
+
+			<!-- Make this jar executable -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<!-- Exclude -->
+					<excludes>
+						<exclude>**/logback.xml</exclude>
+						<exclude>**/ServiceConfiguration.xml</exclude>
+					</excludes>
+					<archive>
+						<manifest>
+							<!-- Jar file entry point -->
+							<mainClass>org.shopfoundry.services.email.EmailDispatcherService</mainClass>
+							<classpathPrefix>libs/</classpathPrefix>
+							<addClasspath>true</addClasspath>
+						</manifest>
+						<manifestEntries>
+							<Class-Path>resources/</Class-Path>
+						</manifestEntries>
+					</archive>
+					<outputDirectory>${project.build.directory}/${project.artifactId}</outputDirectory>
+				</configuration>
+			</plugin>
+
+			<!-- Copy project dependencies -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.5.1</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<!-- exclude junit, we need runtime dependency only -->
+							<includeScope>runtime</includeScope>
+							<outputDirectory>${project.build.directory}/${project.artifactId}/libs/</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Copy project resources -->
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<!-- here the phase you need -->
+						<phase>package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/${project.artifactId}/resources</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/resources</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+							<encoding>${encoding}</encoding>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+
+	</build>
+
 </project>
