Smtp outbound gateway implementation

--- a/shopfoundry-core/shopfoundry-core-service/pom.xml
+++ b/shopfoundry-core/shopfoundry-core-service/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
-			<version>3.4.3</version>
+			<version>3.5.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
@@ -66,6 +66,11 @@
 			<groupId>org.ini4j</groupId>
 			<artifactId>ini4j</artifactId>
 			<version>0.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.4</version>
 		</dependency>
 	</dependencies>
 </project>
