--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: java
 jdk:
   - oraclejdk7
 
-before_install: "curl -L --cookie 'oraclelicense=accept-securebackup-cookie;' http://download.oracle.com/otn-pub/java/jce/7/UnlimitedJCEPolicyJDK7.zip -o /tmp/policy.zip && sudo unzip -j -o /tmp/policy.zip *.jar -d `jdk_switcher home oraclejdk7`/jre/lib/security && rm /tmp/policy.zip"
+before_install: "curl -L --cookie 'oraclelicense=accept-securebackup-cookie;' http://download.oracle.com/otn-pub/java/jce/7/UnlimitedJCEPolicyJDK7.zip -o /tmp/policy.zip && unzip -j -o /tmp/policy.zip *.jar -d `jdk_switcher home oraclejdk7`/jre/lib/security && rm /tmp/policy.zip"
