--- a/shopfoundry-services/shopfoundry-services-pki-ca/pom.xml
+++ b/shopfoundry-services/shopfoundry-services-pki-ca/pom.xml
@@ -26,6 +26,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
 				<configuration>
 					<!-- DO NOT include resources into Jar -->
 					<excludes>
